# Seedra

./: .clang-format  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.txt  LegacyCubiomes.sln  README.md  main1.cpp  main2.cpp
LegacyCubiomes/: CMakeLists.txt  LegacyCubiomes.vcxproj  LegacyCubiomes.vcxproj.filters  main.cpp  seeds1.txt
LegacyCubiomes/LegacyCubiomes/building_blocks/: BasePiece.hpp  BoundingBox.hpp
LegacyCubiomes/LegacyCubiomes/chunk_generator/: CaveGenerator.hpp  ChunkGenerator.cpp  ChunkGenerator.hpp  ChunkPrimer.hpp  RavineGenerator.hpp  biome.cpp  biome.hpp  block.hpp
LegacyCubiomes/LegacyCubiomes/cubiomes/: generator.hpp  layers.cpp  layers.hpp  noise.hpp  rng.hpp  util.cpp  util.hpp
LegacyCubiomes/LegacyCubiomes/features/: lakes.hpp
LegacyCubiomes/LegacyCubiomes/loot/: abandoned_mineshaft.hpp  igloo_chest.hpp  jungle_temple.hpp  nether_bridge.hpp  setup.hpp  simple_dungeon.hpp  stronghold_crossing.hpp  stronghold_library.hpp
LegacyCubiomes/LegacyCubiomes/mc/: itemID.hpp  itemTypes.hpp  items.hpp
LegacyCubiomes/LegacyCubiomes/utils/: enums.hpp  pos2D.hpp
LegacyCubiomes/building_blocks/: BasePiece.cpp  BasePiece.hpp  BoundingBox.cpp  BoundingBox.hpp  Piece.cpp  Piece.hpp  PieceType.hpp  PieceWeight.hpp  Stones.hpp  StrongholdStones.hpp  StructureComponent.cpp  StructureComponent.hpp  include.hpp
LegacyCubiomes/chunk_detector/: RavineDetector.cpp  RavineDetector.hpp
LegacyCubiomes/chunk_generator/: BalancedSeed.hpp  CaveGenerator.cpp  CaveGenerator.hpp  Chunk.cpp  Chunk.hpp  ChunkGenerator.cpp  ChunkGenerator.hpp  ChunkPrimer.cpp  ChunkPrimer.hpp  MapGenBase.hpp  NoiseGenerator.hpp  RavineGenerator.cpp  RavineGenerator.hpp  UnderwaterCanyonGenerator.cpp  UnderwaterCanyonGenerator.h  UnderwaterLargeCaveGenerator.cpp  UnderwaterLargeCaveGenerator.hpp  WaterCaveGenerator.cpp  WaterCaveGenerator.hpp  WaterCaveGeneratorBase.hpp  WaterRavineGenerator.cpp  WaterRavineGenerator.hpp  World.cpp  World.hpp  biome.cpp  biome.hpp  block.hpp  stuff.hpp
LegacyCubiomes/cubiomes/: biomeColor.cpp  biomeColor.hpp  biomeID.hpp  generator.cpp  generator.hpp  include.hpp  layers.cpp  layers.hpp  noise.cpp  noise.hpp  picture.hpp  processor.hpp  rng.hpp  util.cpp  util.hpp  worldPicture.cpp  worldPicture.hpp
LegacyCubiomes/enchants/: README.md  enchantment.cpp  enchantment.hpp  enchantmentData.cpp  enchantmentData.hpp  enchantmentHelper.cpp  enchantmentHelper.hpp  enchantmentHelperBook.cpp  enchantmentHelperBook.hpp  enchantmentRegistry.hpp  fastBookEnchantArray.cpp  fastBookEnchantArray.hpp  fastEnchantArray.cpp  fastEnchantArray.hpp  include.hpp  rarity.cpp  rarity.hpp  weightedRandom.cpp  weightedRandom.hpp
LegacyCubiomes/enchants/classes/: EnchantmentArrowDamage.hpp  EnchantmentArrowFire.hpp  EnchantmentArrowInfinite.hpp  EnchantmentArrowKnockback.hpp  EnchantmentBindingCurse.hpp  EnchantmentDamage.hpp  EnchantmentDigging.hpp  EnchantmentDurability.hpp  EnchantmentFireAspect.hpp  EnchantmentFishingSpeed.hpp  EnchantmentFrostWalker.hpp  EnchantmentKnockback.hpp  EnchantmentLootBonus.hpp  EnchantmentMending.hpp  EnchantmentOxygen.hpp  EnchantmentProtection.cpp  EnchantmentProtection.hpp  EnchantmentSweepingEdge.hpp  EnchantmentThorns.hpp  EnchantmentTridentChanneling.hpp  EnchantmentTridentImpaler.hpp  EnchantmentTridentLoyalty.hpp  EnchantmentTridentRiptide.hpp  EnchantmentUntouching.hpp  EnchantmentVanishingCurse.hpp  EnchantmentWaterWalker.hpp  EnchantmentWaterWorker.hpp
LegacyCubiomes/features/: BiomeDecorator.cpp  BiomeDecorator.hpp  feature_funcs  lakes.hpp
LegacyCubiomes/features/WorldGenerator/: WorldGenAbstractTree.cpp  WorldGenAbstractTree.hpp  WorldGenBigMushroom.cpp  WorldGenBigMushroom.hpp  WorldGenBigTree.cpp  WorldGenBigTree.hpp  WorldGenBirchTree.cpp  WorldGenBirchTree.hpp  WorldGenBlockBlob.cpp  WorldGenBlockBlob.hpp  WorldGenBush.cpp  WorldGenBush.hpp  WorldGenCactus.cpp  WorldGenCactus.hpp  WorldGenCanopyTree.cpp  WorldGenCanopyTree.hpp  WorldGenClay.cpp  WorldGenClay.hpp  WorldGenCucurbitsBlock.cpp  WorldGenCucurbitsBlock.hpp  WorldGenDeadBush.cpp  WorldGenDeadBush.hpp  WorldGenDoublePlant.cpp  WorldGenDoublePlant.hpp  WorldGenDungeons.cpp  WorldGenDungeons.hpp  WorldGenFlowers.cpp  WorldGenFlowers.hpp  WorldGenHugeTrees.cpp  WorldGenHugeTrees.hpp  WorldGenIcePath.cpp  WorldGenIcePath.hpp  WorldGenIceSpike.cpp  WorldGenIceSpike.hpp  WorldGenLakes.cpp  WorldGenLakes.hpp  WorldGenLiquids.cpp  WorldGenLiquids.hpp  WorldGenMegaJungle.cpp  WorldGenMegaJungle.hpp  (+29 more)
LegacyCubiomes/loot/: README.md  abandoned_mineshaft.hpp  blacksmith.hpp  buried_treasure.hpp  desert_temple.hpp  end_city_treasure.hpp  igloo_chest.hpp  include.hpp  jungle_temple.hpp  jungle_temple_dispenser.hpp  nether_bridge.hpp  setup.hpp  shipwreck_map.hpp  shipwreck_supply.hpp  shipwreck_treasure.hpp  simple_dungeon.hpp  spawn_bonus_chest.hpp  stronghold_corridor.hpp  stronghold_crossing.hpp  stronghold_library.hpp  underwater_ruin_big.hpp  underwater_ruin_small.hpp  village_two_room_house.hpp  woodland_mansion.hpp
LegacyCubiomes/loot/base_classes/: loot.hpp  loot_classes.cpp  loot_classes.hpp  stronghold_loot.cpp  stronghold_loot.hpp
LegacyCubiomes/loot/classes/: Container.cpp  Container.hpp  EnchantRandomly.cpp  EnchantRandomly.hpp  EnchantWithLevels.cpp  EnchantWithLevels.hpp  ItemEntry.hpp  ItemStack.cpp  ItemStack.hpp  Loot.cpp  Loot.hpp  LootFunction.hpp  LootItem.hpp  LootTable.cpp  LootTable.hpp  SetMetadata.cpp  (+4 more)
LegacyCubiomes/mc/: include.hpp  itemID.hpp  itemTypes.hpp  items.hpp  mapcolors.h  mapcolors.hpp
LegacyCubiomes/structures/: README.md  include.hpp
LegacyCubiomes/utils/: DoublePos2D.cpp  DoublePos2D.hpp  DoublePos3D.cpp  DoublePos3D.hpp  MathHelper.hpp  Pos2D.cpp  Pos2D.hpp  Pos2DTemplate.cpp  Pos2DTemplate.hpp  Pos3D.cpp  Pos3D.hpp  Pos3DTemplate.cpp  Pos3DTemplate.hpp  RegistryNamespaced.hpp  ResourceLocation.hpp  RotationAndMirror.cpp  RotationAndMirror.hpp  constants.hpp  enums.hpp  include.hpp  pos2D.cpp  pos2D.hpp  pos3D.cpp  pos3D.hpp  processor.hpp  range.hpp  rng.hpp  util.hpp  weightedRandom.cpp  weightedRandom.hpp
(+511 files in other folders)
